<resources>
    <string name="app_name">GameCatalog</string>
    <string name="search_game">Search Game</string>
    <string name="game_trailers">Game Trailers</string>
    <string name="description">Description</string>
    <string name="website">Website</string>
    <string name="release_date">Release Date</string>
    <string name="game_screenshot">Game Screenshot</string>
    <string name="original_name">Original Name</string>
    <string name="rating">Rating</string>
</resources>